# dotfiles

./: .Xresources  .gitconfig  .gitignore  .gitmodules  .sops.yaml  .xinitrc  .xprofile  .zprofile  .zshrc  BOOTSTRAP.md  CLAUDE.md  I3-QUICKSTART.md  IMPLEMENTATION_SUMMARY.md  PUSH_INSTRUCTIONS.md  README.md  TODO_NIX.md  bootstrap  build  configuration.nix  devenv.nix  flake.nix  gh.nix.md  git.nix.md  hardware-configuration.nix  home.nix  i3.nix.md  link  local-bin.nix.md  nix-branch.patch  nix-migrate.md  packages.nix.md  polybar.nix.md  result  secrets.claude.yaml  secrets.yaml  vscodium.nix.md  x11.nix.md  zsh.nix.md  zshrc
.config/custom/: packages
.config/gh/: hosts.yml
.config/i3/: config  i3  (+1 more)
.github/: README.md
hosts/: README.md  installer.nix  live-media.nix  shared.nix
keys/: claude.pub
module/: actual.nix  aichat.nix  avahi.nix  claude-code.nix  claude-user.nix  cluster-net.nix  firefox.nix  hosts.nix  i3.nix  identity.nix  minecraft-server.nix  nomad-client.nix  nomad-server.nix  podman.nix  sops.nix  terminal.nix  users.nix  waydroid.nix  x11.nix
package/: default.nix
package/sys/: Cargo.toml  default.nix
package/sys/src/: kv_ser.rs  main.rs
package/sys/src/cmd/: backlight.rs  battery.rs  help.rs  mod.rs
package/sysinfo/: Cargo.toml  default.nix
package/sysinfo/src/: lib.rs  main.rs  output.rs
package/sysinfo/src/cmd/: battery.rs  help.rs
package/sysinfo/src/lib/: mod.rs  output.rs
polybar/: bt_devices.sh  config  config_desktop  gen_wifi.sh
research/: ponder-and-typescript.md
setup/: link
zsh-theme/: liner.zsh-theme
(+121 files in other folders)
